syntax = "proto3";
package cyber.bandwidth.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cybercongress/go-cyber/x/bandwidth/types";

message Params {
    uint64 tx_cost = 1 [
        (gogoproto.jsontag) = "tx_cost",
        (gogoproto.moretags) = "yaml:\"tx_cost\""
    ];

    uint64 link_cost = 2 [
        (gogoproto.jsontag) = "link_cost",
        (gogoproto.moretags) = "yaml:\"link_cost\""
    ];

    uint64 recovery_period = 3 [
        (gogoproto.jsontag) = "recovery_period",
        (gogoproto.moretags) = "yaml:\"recovery_period\""
    ];

    uint64 adjust_price_period = 4 [
        (gogoproto.jsontag) = "adjust_price_period",
        (gogoproto.moretags) = "yaml:\"adjust_price_period\""
    ];

    string base_credit_price = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.jsontag) = "base_credit_price",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags) = "yaml:\"base_credit_price\""
    ];

    uint64 desirable_bandwidth = 6 [
        (gogoproto.jsontag) = "desirable_bandwidth",
        (gogoproto.moretags) = "yaml:\"desirable_bandwidth\""
    ];

    uint64 max_block_bandwidth = 7 [
        (gogoproto.jsontag) = "max_block_bandwidth",
        (gogoproto.moretags) = "yaml:\"max_block_bandwidth\""
    ];
}